footer & header updated

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,10 +1,10 @@
 .procedures {
-    color: #e38211;
+    color: #4e830e;
     font-family: Arial;
 }
 
 .navbar-color {
-    background-color: #62c926!important;
+    background-color: #e7690d!important;
 }
 
 .procedure-img {
