--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -15,3 +15,10 @@
     padding-left: 10vh;
 }
 
+.body {
+    margin: 0;
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+
