--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -15,10 +15,23 @@
     padding-left: 10vh;
 }
 
-.body {
+body {
     margin: 0;
     min-height: 100%;
     display: grid;
     grid-template-rows: auto 1fr auto;
+}
+
+.alert-indents {
+    margin-top: 10px;
+}
+
+.registration-inputs {
+    margin-top: 60px;
+}
+
+.doctor-img {
+    height: 35vh;
+    max-width: 40vh;
 }
 
